[package]
name = "rustls-handshake-test"
version = "0.1.0"
authors = ["Ryan Gorup <gorup@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.15.2"
webpki = "0.19.1"
log = "0.4.6"
env_logger = "0.6"
